[gd_scene load_steps=15 format=2]

[ext_resource path="res://Game/Maps/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Menus/YourMapsMenu.gd" type="Script" id=2]
[ext_resource path="res://Game/Menus/Textures/KeyGamepadConfirm.png" type="Texture" id=3]
[ext_resource path="res://Game/Menus/Textures/KeyKeyboardCancel.png" type="Texture" id=4]
[ext_resource path="res://Game/Menus/Components/MapButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Menus/Fonts/Pixellari.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Game/Menus/Textures/KeyGamepadCancel.png" type="Texture" id=9]
[ext_resource path="res://Game/Menus/Textures/KeyGamepadUp.png" type="Texture" id=11]
[ext_resource path="res://Game/Menus/Textures/PreviousSelected.png" type="Texture" id=12]
[ext_resource path="res://Game/Menus/Textures/Next.png" type="Texture" id=13]
[ext_resource path="res://Game/Menus/Textures/Previous.png" type="Texture" id=14]
[ext_resource path="res://Game/Menus/Textures/NextSelected.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 1
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 8 )

[node name="Map" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Wall" parent="." index="2"]
tile_data = PoolIntArray( 0, 11, 0, 1, 11, 1, 2, 11, 1, 3, 11, 1, 4, 11, 1, 5, 11, 1, 6, 11, 1, 7, 11, 1, 8, 11, 1, 9, 11, 1, 10, 11, 1, 11, 11, 1, 12, 11, 1, 13, 11, 1, 14, 11, 1, 15, 11, 1, 16, 11, 1, 17, 11, 1, 18, 11, 1, 19, 11, 1, 20, 11, 1, 21, 11, 1, 22, 11, 1, 23, 11, 1, 24, 11, 1, 25, 11, 1, 26, 11, 1, 27, 11, 1, 28, 11, 1, 29, 11, 1, 30, 11, 1, 31, 11, 2, 65536, 11, 65536, 65537, 11, 65537, 65538, 11, 65537, 65539, 11, 65537, 65540, 11, 65537, 65541, 11, 65537, 65542, 11, 65537, 65543, 11, 65537, 65544, 11, 65537, 65545, 11, 65537, 65546, 11, 65537, 65547, 11, 65537, 65548, 11, 65537, 65549, 11, 65537, 65550, 11, 65537, 65551, 11, 65537, 65552, 11, 65537, 65553, 11, 65537, 65554, 11, 65537, 65555, 11, 65537, 65556, 11, 65537, 65557, 11, 65537, 65558, 11, 65537, 65559, 11, 65537, 65560, 11, 65537, 65561, 11, 65537, 65562, 11, 65537, 65563, 11, 65537, 65564, 11, 65537, 65565, 11, 65537, 65566, 11, 65537, 65567, 11, 65538, 131072, 11, 65536, 131073, 11, 65537, 131074, 11, 65537, 131075, 11, 65537, 131076, 11, 65537, 131077, 11, 65537, 131078, 11, 65537, 131079, 11, 65537, 131080, 11, 65537, 131081, 11, 65537, 131082, 11, 65537, 131083, 11, 65537, 131084, 11, 65537, 131085, 11, 65537, 131086, 11, 65537, 131087, 11, 65537, 131088, 11, 65537, 131089, 11, 65537, 131090, 11, 65537, 131091, 11, 65537, 131092, 11, 65537, 131093, 11, 65537, 131094, 11, 65537, 131095, 11, 65537, 131096, 11, 65537, 131097, 11, 65537, 131098, 11, 65537, 131099, 11, 65537, 131100, 11, 65537, 131101, 11, 65537, 131102, 11, 65537, 131103, 11, 65538, 196608, 11, 65536, 196609, 11, 65537, 196610, 11, 65537, 196611, 11, 65537, 196612, 11, 65537, 196613, 11, 65537, 196614, 11, 65537, 196615, 11, 65537, 196616, 11, 65537, 196617, 11, 65537, 196618, 11, 65537, 196619, 11, 65537, 196620, 11, 65537, 196621, 11, 65537, 196622, 11, 65537, 196623, 11, 65537, 196624, 11, 65537, 196625, 11, 65537, 196626, 11, 65537, 196627, 11, 65537, 196628, 11, 65537, 196629, 11, 65537, 196630, 11, 65537, 196631, 11, 65537, 196632, 11, 65537, 196633, 11, 65537, 196634, 11, 65537, 196635, 11, 65537, 196636, 11, 65537, 196637, 11, 65537, 196638, 11, 65537, 196639, 11, 65538, 262144, 11, 65536, 262145, 11, 65537, 262146, 11, 65537, 262147, 11, 65537, 262148, 11, 65537, 262149, 11, 65537, 262150, 11, 65537, 262151, 11, 65537, 262152, 11, 65537, 262153, 11, 65537, 262154, 11, 65537, 262155, 11, 65537, 262156, 11, 65537, 262157, 11, 65537, 262158, 11, 65537, 262159, 11, 65537, 262160, 11, 65537, 262161, 11, 65537, 262162, 11, 65537, 262163, 11, 65537, 262164, 11, 65537, 262165, 11, 65537, 262166, 11, 65537, 262167, 11, 65537, 262168, 11, 65537, 262169, 11, 65537, 262170, 11, 65537, 262171, 11, 65537, 262172, 11, 65537, 262173, 11, 65537, 262174, 11, 65537, 262175, 11, 65538, 327680, 11, 65536, 327681, 11, 65537, 327682, 11, 65537, 327683, 11, 65537, 327684, 11, 65537, 327685, 11, 65537, 327686, 11, 65537, 327687, 11, 65537, 327688, 11, 65537, 327689, 11, 65537, 327690, 11, 65537, 327691, 11, 65537, 327692, 11, 65537, 327693, 11, 65537, 327694, 11, 65537, 327695, 11, 65537, 327696, 11, 65537, 327697, 11, 65537, 327698, 11, 65537, 327699, 11, 65537, 327700, 11, 65537, 327701, 11, 65537, 327702, 11, 65537, 327703, 11, 65537, 327704, 11, 65537, 327705, 11, 65537, 327706, 11, 65537, 327707, 11, 65537, 327708, 11, 65537, 327709, 11, 65537, 327710, 11, 65537, 327711, 11, 65538, 393216, 11, 65536, 393217, 11, 65537, 393218, 11, 65537, 393219, 11, 65537, 393220, 11, 65537, 393221, 11, 65537, 393222, 11, 65537, 393223, 11, 65537, 393224, 11, 65537, 393225, 11, 65537, 393226, 11, 65537, 393227, 11, 65537, 393228, 11, 65537, 393229, 11, 65537, 393230, 11, 65537, 393231, 11, 65537, 393232, 11, 65537, 393233, 11, 65537, 393234, 11, 65537, 393235, 11, 65537, 393236, 11, 65537, 393237, 11, 65537, 393238, 11, 65537, 393239, 11, 65537, 393240, 11, 65537, 393241, 11, 65537, 393242, 11, 65537, 393243, 11, 65537, 393244, 11, 65537, 393245, 11, 65537, 393246, 11, 65537, 393247, 11, 65538, 458752, 11, 65536, 458753, 11, 65537, 458754, 11, 65537, 458755, 11, 65537, 458756, 11, 65537, 458757, 11, 65537, 458758, 11, 65537, 458759, 11, 65537, 458760, 11, 65537, 458761, 11, 65537, 458762, 11, 65537, 458763, 11, 65537, 458764, 11, 65537, 458765, 11, 65537, 458766, 11, 65537, 458767, 11, 65537, 458768, 11, 65537, 458769, 11, 65537, 458770, 11, 65537, 458771, 11, 65537, 458772, 11, 65537, 458773, 11, 65537, 458774, 11, 65537, 458775, 11, 65537, 458776, 11, 65537, 458777, 11, 65537, 458778, 11, 65537, 458779, 11, 65537, 458780, 11, 65537, 458781, 11, 65537, 458782, 11, 65537, 458783, 11, 65538, 524288, 11, 65536, 524289, 11, 65537, 524290, 11, 65537, 524291, 11, 65537, 524292, 11, 65537, 524293, 11, 65537, 524294, 11, 65537, 524295, 11, 65537, 524296, 11, 65537, 524297, 11, 65537, 524298, 11, 65537, 524299, 11, 65537, 524300, 11, 65537, 524301, 11, 65537, 524302, 11, 65537, 524303, 11, 65537, 524304, 11, 65537, 524305, 11, 65537, 524306, 11, 65537, 524307, 11, 65537, 524308, 11, 65537, 524309, 11, 65537, 524310, 11, 65537, 524311, 11, 65537, 524312, 11, 65537, 524313, 11, 65537, 524314, 11, 65537, 524315, 11, 65537, 524316, 11, 65537, 524317, 11, 65537, 524318, 11, 65537, 524319, 11, 65538, 589824, 11, 65536, 589825, 11, 65537, 589826, 11, 65537, 589827, 11, 65537, 589828, 11, 65537, 589829, 11, 65537, 589830, 11, 65537, 589831, 11, 65537, 589832, 11, 65537, 589833, 11, 65537, 589834, 11, 65537, 589835, 11, 65537, 589836, 11, 65537, 589837, 11, 65537, 589838, 11, 65537, 589839, 11, 65537, 589840, 11, 65537, 589841, 11, 65537, 589842, 11, 65537, 589843, 11, 65537, 589844, 11, 65537, 589845, 11, 65537, 589846, 11, 65537, 589847, 11, 65537, 589848, 11, 65537, 589849, 11, 65537, 589850, 11, 65537, 589851, 11, 65537, 589852, 11, 65537, 589853, 11, 65537, 589854, 11, 65537, 589855, 11, 65538, 655360, 11, 65536, 655361, 11, 65537, 655362, 11, 65537, 655363, 11, 65537, 655364, 11, 65537, 655365, 11, 65537, 655366, 11, 65537, 655367, 11, 65537, 655368, 11, 65537, 655369, 11, 65537, 655370, 11, 65537, 655371, 11, 65537, 655372, 11, 65537, 655373, 11, 65537, 655374, 11, 65537, 655375, 11, 65537, 655376, 11, 65537, 655377, 11, 65537, 655378, 11, 65537, 655379, 11, 65537, 655380, 11, 65537, 655381, 11, 65537, 655382, 11, 65537, 655383, 11, 65537, 655384, 11, 65537, 655385, 11, 65537, 655386, 11, 65537, 655387, 11, 65537, 655388, 11, 65537, 655389, 11, 65537, 655390, 11, 65537, 655391, 11, 65538, 720896, 11, 65536, 720897, 11, 65537, 720898, 11, 65537, 720899, 11, 65537, 720900, 11, 65537, 720901, 11, 65537, 720902, 11, 65537, 720903, 11, 65537, 720904, 11, 65537, 720905, 11, 65537, 720906, 11, 65537, 720907, 11, 65537, 720908, 11, 65537, 720909, 11, 65537, 720910, 11, 65537, 720911, 11, 65537, 720912, 11, 65537, 720913, 11, 65537, 720914, 11, 65537, 720915, 11, 65537, 720916, 11, 65537, 720917, 11, 65537, 720918, 11, 65537, 720919, 11, 65537, 720920, 11, 65537, 720921, 11, 65537, 720922, 11, 65537, 720923, 11, 65537, 720924, 11, 65537, 720925, 11, 65537, 720926, 11, 65537, 720927, 11, 65538, 786432, 11, 65536, 786433, 11, 65537, 786434, 11, 65537, 786435, 11, 65537, 786436, 11, 65537, 786437, 11, 65537, 786438, 11, 65537, 786439, 11, 65537, 786440, 11, 65537, 786441, 11, 65537, 786442, 11, 65537, 786443, 11, 65537, 786444, 11, 65537, 786445, 11, 65537, 786446, 11, 65537, 786447, 11, 65537, 786448, 11, 65537, 786449, 11, 65537, 786450, 11, 65537, 786451, 11, 65537, 786452, 11, 65537, 786453, 11, 65537, 786454, 11, 65537, 786455, 11, 65537, 786456, 11, 65537, 786457, 11, 65537, 786458, 11, 65537, 786459, 11, 65537, 786460, 11, 65537, 786461, 11, 65537, 786462, 11, 65537, 786463, 11, 65538, 851968, 11, 65536, 851969, 11, 65537, 851970, 11, 65537, 851971, 11, 65537, 851972, 11, 65537, 851973, 11, 65537, 851974, 11, 65537, 851975, 11, 65537, 851976, 11, 65537, 851977, 11, 65537, 851978, 11, 65537, 851979, 11, 65537, 851980, 11, 65537, 851981, 11, 65537, 851982, 11, 65537, 851983, 11, 65537, 851984, 11, 65537, 851985, 11, 65537, 851986, 11, 65537, 851987, 11, 65537, 851988, 11, 65537, 851989, 11, 65537, 851990, 11, 65537, 851991, 11, 65537, 851992, 11, 65537, 851993, 11, 65537, 851994, 11, 65537, 851995, 11, 65537, 851996, 11, 65537, 851997, 11, 65537, 851998, 11, 65537, 851999, 11, 65538, 917504, 11, 65536, 917505, 11, 65537, 917506, 11, 65537, 917507, 11, 65537, 917508, 11, 65537, 917509, 11, 65537, 917510, 11, 65537, 917511, 11, 65537, 917512, 11, 65537, 917513, 11, 65537, 917514, 11, 65537, 917515, 11, 65537, 917516, 11, 65537, 917517, 11, 65537, 917518, 11, 65537, 917519, 11, 65537, 917520, 11, 65537, 917521, 11, 65537, 917522, 11, 65537, 917523, 11, 65537, 917524, 11, 65537, 917525, 11, 65537, 917526, 11, 65537, 917527, 11, 65537, 917528, 11, 65537, 917529, 11, 65537, 917530, 11, 65537, 917531, 11, 65537, 917532, 11, 65537, 917533, 11, 65537, 917534, 11, 65537, 917535, 11, 65538, 983040, 11, 65536, 983041, 11, 65537, 983042, 11, 65537, 983043, 11, 65537, 983044, 11, 65537, 983045, 11, 65537, 983046, 11, 65537, 983047, 11, 65537, 983048, 11, 65537, 983049, 11, 65537, 983050, 11, 65537, 983051, 11, 65537, 983052, 11, 65537, 983053, 11, 65537, 983054, 11, 65537, 983055, 11, 65537, 983056, 11, 65537, 983057, 11, 65537, 983058, 11, 65537, 983059, 11, 65537, 983060, 11, 65537, 983061, 11, 65537, 983062, 11, 65537, 983063, 11, 65537, 983064, 11, 65537, 983065, 11, 65537, 983066, 11, 65537, 983067, 11, 65537, 983068, 11, 65537, 983069, 11, 65537, 983070, 11, 65537, 983071, 11, 65538, 1048576, 11, 65536, 1048577, 11, 65537, 1048578, 11, 65537, 1048579, 11, 65537, 1048580, 11, 65537, 1048581, 11, 65537, 1048582, 11, 65537, 1048583, 11, 65537, 1048584, 11, 65537, 1048585, 11, 65537, 1048586, 11, 65537, 1048587, 11, 65537, 1048588, 11, 65537, 1048589, 11, 65537, 1048590, 11, 65537, 1048591, 11, 65537, 1048592, 11, 65537, 1048593, 11, 65537, 1048594, 11, 65537, 1048595, 11, 65537, 1048596, 11, 65537, 1048597, 11, 65537, 1048598, 11, 65537, 1048599, 11, 65537, 1048600, 11, 65537, 1048601, 11, 65537, 1048602, 11, 65537, 1048603, 11, 65537, 1048604, 11, 65537, 1048605, 11, 65537, 1048606, 11, 65537, 1048607, 11, 65538, 1114112, 11, 131072, 1114113, 11, 131073, 1114114, 11, 131073, 1114115, 11, 131073, 1114116, 11, 131073, 1114117, 11, 131073, 1114118, 11, 131073, 1114119, 11, 131073, 1114120, 11, 131073, 1114121, 11, 131073, 1114122, 11, 131073, 1114123, 11, 131073, 1114124, 11, 131073, 1114125, 11, 131073, 1114126, 11, 131073, 1114127, 11, 131073, 1114128, 11, 131073, 1114129, 11, 131073, 1114130, 11, 131073, 1114131, 11, 131073, 1114132, 11, 131073, 1114133, 11, 131073, 1114134, 11, 131073, 1114135, 11, 131073, 1114136, 11, 131073, 1114137, 11, 131073, 1114138, 11, 131073, 1114139, 11, 131073, 1114140, 11, 131073, 1114141, 11, 131073, 1114142, 11, 131073, 1114143, 11, 131074 )

[node name="GUI" type="Control" parent="." index="12"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToLobbyLabel" type="Label" parent="GUI" index="0"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 47.3804
margin_top = 248.0
margin_right = 189.38
margin_bottom = 264.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "previous"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToLobbyLabel2" type="Label" parent="GUI" index="1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 48.8804
margin_top = 264.0
margin_right = 190.88
margin_bottom = 280.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "back to lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToLobbyLabel4" type="Label" parent="GUI" index="2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 376.0
margin_top = 248.0
margin_right = 445.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToLobbyLabel3" type="Label" parent="GUI" index="3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 374.0
margin_top = 264.0
margin_right = 445.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "select map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI" index="4"]
margin_right = 512.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Choose a map"
align = 1
valign = 1

[node name="RandomMapButton" parent="GUI" index="5" instance=ExtResource( 5 )]
margin_left = 49.5
margin_top = 32.0
margin_right = 177.5
margin_bottom = 120.0
focus_neighbour_left = NodePath("../PreviousButton")
focus_neighbour_right = NodePath("../MapButton1")
focus_neighbour_bottom = NodePath("../MapButton3")
focus_next = NodePath("../MapButton1")
focus_previous = NodePath("../PreviousButton")

[node name="MapButton1" parent="GUI" index="6" instance=ExtResource( 5 )]
margin_top = 32.0
margin_bottom = 120.0
focus_neighbour_left = NodePath("../RandomMapButton")
focus_previous = NodePath("../RandomMapButton")

[node name="MapButton2" parent="GUI" index="7" instance=ExtResource( 5 )]
margin_left = 336.0
margin_top = 32.0
margin_right = 464.0
margin_bottom = 120.0
focus_neighbour_left = NodePath("../MapButton1")
focus_neighbour_right = NodePath("../NextButton")
focus_neighbour_bottom = NodePath("../MapButton5")
focus_next = NodePath("../MapButton3")
focus_previous = NodePath("../MapButton1")

[node name="MapButton3" parent="GUI" index="8" instance=ExtResource( 5 )]
margin_left = 49.5
margin_top = 136.0
margin_right = 177.5
margin_bottom = 224.0
focus_neighbour_left = NodePath("../PreviousButton")
focus_neighbour_top = NodePath("../RandomMapButton")
focus_neighbour_right = NodePath("../MapButton4")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../MapButton4")
focus_previous = NodePath("../MapButton2")

[node name="MapButton4" parent="GUI" index="9" instance=ExtResource( 5 )]
margin_top = 136.0
margin_bottom = 224.0
focus_neighbour_left = NodePath("../MapButton3")
focus_neighbour_top = NodePath("../MapButton1")
focus_neighbour_right = NodePath("../MapButton5")
focus_neighbour_bottom = NodePath("../MapButton3")
focus_next = NodePath("../MapButton5")
focus_previous = NodePath("../MapButton3")

[node name="MapButton5" parent="GUI" index="10" instance=ExtResource( 5 )]
margin_left = 336.0
margin_top = 136.0
margin_right = 464.0
margin_bottom = 224.0
focus_neighbour_left = NodePath("../MapButton4")
focus_neighbour_top = NodePath("../MapButton2")
focus_neighbour_right = NodePath("../NextButton")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../NextButton")
focus_previous = NodePath("../MapButton4")

[node name="PreviousButton" type="TextureButton" parent="GUI" index="11"]
margin_left = 8.0
margin_top = 120.0
margin_right = 40.0
margin_bottom = 152.0
focus_neighbour_left = NodePath("../NextButton")
focus_neighbour_top = NodePath("../RandomMapButton")
focus_neighbour_right = NodePath("../RandomMapButton")
focus_neighbour_bottom = NodePath("../MapButton3")
focus_next = NodePath("../RandomMapButton")
focus_previous = NodePath(".")
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_focused = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="GUI" index="12"]
margin_left = 472.0
margin_top = 120.0
margin_right = 504.0
margin_bottom = 152.0
focus_neighbour_left = NodePath("../MapButton2")
focus_neighbour_top = NodePath("../MapButton2")
focus_neighbour_right = NodePath("../PreviousButton")
focus_neighbour_bottom = NodePath("../MapButton5")
focus_next = NodePath(".")
focus_previous = NodePath("../MapButton2")
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
texture_focused = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icons" type="Node2D" parent="." index="13"]

[node name="KeyGamepadCancel" type="Sprite" parent="Icons" index="0"]
position = Vector2( 56, 256 )
texture = ExtResource( 11 )

[node name="KeyGamepadCancel2" type="Sprite" parent="Icons" index="1"]
position = Vector2( 56, 272 )
texture = ExtResource( 9 )

[node name="KeyGamepadCancel4" type="Sprite" parent="Icons" index="2"]
position = Vector2( 384, 256 )
texture = ExtResource( 11 )

[node name="KeyGamepadCancel3" type="Sprite" parent="Icons" index="3"]
position = Vector2( 384, 272 )
texture = ExtResource( 3 )

[node name="KeyKeyboardCancel" type="Sprite" parent="Icons" index="4"]
visible = false
position = Vector2( 60, 264 )
texture = ExtResource( 4 )
[connection signal="pressed" from="GUI/RandomMapButton" to="." method="_on_RandomMapButton_pressed"]
[connection signal="pressed" from="GUI/MapButton1" to="." method="_on_MapButton1_pressed"]
[connection signal="pressed" from="GUI/MapButton2" to="." method="_on_MapButton2_pressed"]
[connection signal="pressed" from="GUI/MapButton3" to="." method="_on_MapButton3_pressed"]
[connection signal="pressed" from="GUI/MapButton4" to="." method="_on_MapButton4_pressed"]
[connection signal="pressed" from="GUI/MapButton5" to="." method="_on_MapButton5_pressed"]
[connection signal="pressed" from="GUI/PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="GUI/NextButton" to="." method="_on_NextButton_pressed"]
